--- a/manifest.json
+++ b/manifest.json
@@ -2,16 +2,21 @@
 
     "manifest_version": 2,
     "name": "Ytesing",
-    "version": "1.0.3",
-  
+    "version": "1.0.4",
+
+    "developer": {
+      "name": "Alberto Calzada",
+      "url": "https://github.com/albertoCCz/ytesing"
+    },
+
     "description": "Clicks on 'Yes', to continue watching the Youtube playlist.",
   
     "icons": {
-      "16": "icons/icon-ytesing.svg",
-      "32": "icons/icon-ytesing.svg",
-      "48": "icons/icon-ytesing.svg",
-      "96": "icons/icon-ytesing.svg",
-      "128": "icons/icon-ytesing.svg"
+      "16": "icons/icon-ytesing-1028.svg",
+      "32": "icons/icon-ytesing-1028.svg",
+      "48": "icons/icon-ytesing-1028.svg",
+      "96": "icons/icon-ytesing-1028.svg",
+      "128": "icons/icon-ytesing-1028.svg"
     },
   
     "content_scripts": [
